--- a/www/theme/firekylin/layout.html
+++ b/www/theme/firekylin/layout.html
@@ -8,7 +8,7 @@
   <meta name="keyword" content="{{options.keywords}}">
   <meta name="description" content="{{options.description}}">
   <title>{% block title %}{% endblock %}</title>
-  <link rel="stylesheet" href="/static/css/home/all.css" type="text/css">
+  <link rel="stylesheet" href="/theme/firekylin/res/css/all.css" type="text/css">
 </head>
 <body>
 <nav id="sidebar" class="behavior_1">
