--- a/www/theme/firekylin/inc/comment.html
+++ b/www/theme/firekylin/inc/comment.html
@@ -1,6 +1,6 @@
-<div id="comments">
-    <h2>Comments</h2>
-    <div id="disqus_thread">
+<div id="comments" data-type="disqus">
+    <h1 class="title">Comments</h1>
+    <div id="disqus_thread" data-url="{{protocol}}{{http.host}}{{http.url}}" data-identifier="{{http.get('pathname')}}" data-name="welefen">
         评论加载中...
         <br>
         <br>
