--- a/www/theme/firekylin/list.html
+++ b/www/theme/firekylin/list.html
@@ -18,7 +18,7 @@
     <div class="meta">
       <div class="date">{{think.datetime(post.create_time, 'MM月DD, YYYY')}}</div>
       <div class="comment">
-          <a href="/post/{{post.pathname}}.html#comments">71 comments</a>
+          <a href="/post/{{post.pathname}}.html#comments">{{post.comment_num}} comments</a>
       </div>
     </div>
 
