修改详细页的评论显示数

--- a/www/theme/firekylin/detail.html
+++ b/www/theme/firekylin/detail.html
@@ -8,9 +8,9 @@
 <div id="page-post">
     <article class="post detail">
         <div class="meta">
-            <div class="date">{{think.datetime(post.create_time, 'MM月DD, YYYY')}}</div>
+            <div class="date">{{think.datetime(detail.create_time, 'MM月DD, YYYY')}}</div>
             <div class="comment">
-                <a href="">71 comments</a>
+                <a href="">{{detail.comment_num}} comments</a>
             </div>
         </div>
         <h1 class="title">{{detail.title}}</h1>
