--- a/www/theme/firekylin/layout.html
+++ b/www/theme/firekylin/layout.html
@@ -99,7 +99,7 @@
   {% if options.miitbeian %}
     &nbsp;-&nbsp;<a target="_blank" rel="nofollow" class="external beian" href="http://www.miitbeian.gov.cn/">{{options.miitbeian}}</a>
   {%else%}
-    &nbsp;-&nbsp;<a href="{{ host }}">{{http.hostname}}</a>
+    &nbsp;-&nbsp;<a href="/">{{http.hostname}}</a>
   {% endif %}
   <br />
   Powered by&nbsp;<a target="_blank" href="https://thinkjs.org">ThinkJS</a>
