--- a/www/theme/firekylin/tag.html
+++ b/www/theme/firekylin/tag.html
@@ -1,7 +1,7 @@
 {% extends './layout.html' %}
 
 {% block title %}
-{{page.title}} - {{options.title}}
+标签 - {{options.title}}
 {% endblock %}
 
 {% block content %}
