--- a/www/theme/firekylin/inc/comment.html
+++ b/www/theme/firekylin/inc/comment.html
@@ -3,14 +3,14 @@
     {% if options.comment.name %}
 
       {% if options.comment.type == 'disqus' %}
-      <div id="disqus_thread" data-url="{{protocol}}{{http.host}}{{http.url}}" data-identifier="{{think.md5(http.get('pathname'))}}" data-name="{{options.comment.name}}">
+      <div id="disqus_thread" data-url="{{site_url}}{{http.url}}" data-identifier="{{think.md5(http.get('pathname'))}}" data-name="{{options.comment.name}}">
           评论加载中...
           <br>
           <br>
           注：如果长时间无法加载，请针对 disq.us | disquscdn.com | disqus.com 启用代理。
       </div>
       {% elif options.comment.type == 'duoshuo'%}
-        <div id="ds_thread" class="ds-thread" data-thread-key="{{think.md5(http.get('pathname'))}}" data-url="{{protocol}}{{http.host}}{{http.url}}" data-name="{{options.comment.name}}">
+        <div id="ds_thread" class="ds-thread" data-thread-key="{{think.md5(http.get('pathname'))}}" data-url="{{site_url}}{{http.url}}" data-name="{{options.comment.name}}">
         </div>
       {% endif %}
     {% else %}
