--- a/www/theme/firekylin/layout.html
+++ b/www/theme/firekylin/layout.html
@@ -25,32 +25,32 @@
       </div>
       <ul class="buttons">
           <li>
-              <a class="" href="/">
-                  <i class="iconfont icon-home" title="首页"></i>
+              <a class="" href="/" title="首页">
+                  <i class="iconfont icon-home"></i>
                   <span>首页</span>
               </a>
           </li>
           <li>
-              <a class="" href="/archives/">
-                  <i class="iconfont icon-archive" title="归档"></i>
+              <a class="" href="/archives/" title="归档">
+                  <i class="iconfont icon-archive"></i>
                   <span>归档</span>
               </a>
           </li>
           <li>
-              <a class="" href="/tags/">
-                  <i class="iconfont icon-tags" title="标签"></i>
+              <a class="" href="/tags/" title="标签">
+                  <i class="iconfont icon-tags"></i>
                   <span>标签</span>
               </a>
           </li>
           <li>
-              <a class="" href="/about/">
-                  <i class="iconfont icon-user" title="关于"></i>
+              <a class="" href="/about/" title="关于">
+                  <i class="iconfont icon-user"></i>
                   <span>关于</span>
               </a>
           </li>
           <li>
-              <a class="" href="/links/">
-                  <i class="iconfont icon-link" title="友链"></i>
+              <a class="" href="/links/" title="友情链接">
+                  <i class="iconfont icon-link"></i>
                   <span>友链</span>
               </a>
           </li>
