修复详情页面顶部评论地址错误，fix #73

--- a/www/theme/firekylin/detail.html
+++ b/www/theme/firekylin/detail.html
@@ -10,7 +10,7 @@
         <div class="meta">
             <div class="date">{{think.datetime(detail.create_time, 'MM月DD, YYYY')}}</div>
             <div class="comment">
-                <a href="">{{detail.comment_num}} comments</a>
+                <a href="#comments">{{detail.comment_num}} comments</a>
             </div>
         </div>
         <h1 class="title">{{detail.title}}</h1>
