--- a/www/theme/firekylin/inc/comment.html
+++ b/www/theme/firekylin/inc/comment.html
@@ -12,6 +12,8 @@
       {% elif options.comment.type == 'duoshuo'%}
         <div id="ds_thread" class="ds-thread" data-thread-key="{{think.md5(http.get('pathname'))}}" data-url="{{site_url}}{{http.url}}" data-name="{{options.comment.name}}">
         </div>
+      {% else %}
+        {{options.comment.name|safe}}
       {% endif %}
     {% else %}
     <p>请在后台配置评论类型和相关的值。</p>
