--- a/www/theme/firekylin/layout.html
+++ b/www/theme/firekylin/layout.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
-  <link rel="icon" href="{{options.logo_url |default('/static/img/firekylin.jpg')}}">
+  <link rel="icon" href="{{options.favicon_url |default('/static/img/firekylin.jpg')}}">
   {% if options.favicon %}
   <link rel="shortcut icon" href="{{options.favicon}}" type="image/x-icon">
   {% endif %}
