--- a/www/theme/firekylin/layout.html
+++ b/www/theme/firekylin/layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="zh_CN">
+<html lang="zh-CN">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
   <link rel="icon" href="{{options.favicon_url |default('/static/img/firekylin.jpg')}}">
   {% if options.favicon %}
