--- a/www/theme/firekylin/layout.html
+++ b/www/theme/firekylin/layout.html
@@ -24,36 +24,14 @@
           <span>{{options.title}}</span>
       </div>
       <ul class="buttons">
+          {% for nav in navigation %}
           <li>
-              <a class="" href="/" title="首页">
-                  <i class="iconfont icon-home"></i>
-                  <span>首页</span>
+              <a class="" href="{{nav.url}}" title="{{nav.label}}">
+                  <i class="iconfont icon-{{nav.option}}"></i>
+                  <span>{{nav.label}}</span>
               </a>
           </li>
-          <li>
-              <a class="" href="/archives/" title="归档">
-                  <i class="iconfont icon-archive"></i>
-                  <span>归档</span>
-              </a>
-          </li>
-          <li>
-              <a class="" href="/tags/" title="标签">
-                  <i class="iconfont icon-tags"></i>
-                  <span>标签</span>
-              </a>
-          </li>
-          <li>
-              <a class="" href="/about/" title="关于">
-                  <i class="iconfont icon-user"></i>
-                  <span>关于</span>
-              </a>
-          </li>
-          <li>
-              <a class="" href="/links/" title="友情链接">
-                  <i class="iconfont icon-link"></i>
-                  <span>友链</span>
-              </a>
-          </li>
+          {% endfor %}
       </ul>
       <ul class="buttons">
         <li>
