--- a/www/theme/firekylin/inc/pagination.html
+++ b/www/theme/firekylin/inc/pagination.html
@@ -1,9 +1,9 @@
 <nav class="pagination">
-  {% if postList.currentPage > 1 %}
+  {% if pagination.currentPage > 1 %}
     <a href="/post/?page={{ postList.currentPage - 1 }}" class="prev">&laquo; 上一页</a>
   {% endif %}
 
-  {% if postList.currentPage < postList.totalPages %}
+  {% if pagination.currentPage < pagination.totalPages %}
     <a href="/post/?page={{ postList.currentPage + 1 }}" class="next">下一页 &raquo;</a>
   {% endif %}
 
