--- a/www/theme/firekylin/layout.html
+++ b/www/theme/firekylin/layout.html
@@ -8,7 +8,7 @@
   <link rel="shortcut icon" href="{{options.favicon}}" type="image/x-icon">
   {% endif %}
   <link rel="alternate" type="application/rss+xml" title="RSS 2.0" href="/rss.html">
-  <meta name="keyword" content="{{options.keywords}}">
+  <meta name="keywords" content="{{options.keywords}}">
   <meta name="description" content="{{options.description}}">
   <title>{% block title %}{% endblock %}</title>
   {% set lscookie = 'lscookie'%}
