--- a/www/theme/firekylin/layout.html
+++ b/www/theme/firekylin/layout.html
@@ -8,7 +8,7 @@
   <link rel="shortcut icon" href="{{options.favicon}}" type="image/x-icon">
   {% endif %}
   <link rel="alternate" type="application/rss+xml" title="RSS 2.0" href="/rss.html">
-  <meta name="keyword" content="{{options.keywords}}">
+  <meta name="keywords" content="{{options.keywords}}">
   <meta name="description" content="{{options.description}}">
   <title>{% block title %}{% endblock %}</title>
   {% set lscookie = 'lscookie'%}
@@ -58,18 +58,18 @@
       <ul class="buttons">
         <li>
           {% if options.github_url %}
-          <a class="inline" target="_blank" href="{{options.github_url}}">
+          <a class="inline" rel="nofollow" target="_blank" href="{{options.github_url}}">
             <i class="iconfont icon-github-v" title="GitHub"></i>
           </a>
           {% endif %}
           {% if options.twitter_url %}
             {% if options.twitter_url.indexOf('twitter.com') > -1 %}
-            <a class="inline" target="_blank" href="{{options.twitter_url}}">
+            <a class="inline"  rel="nofollow" target="_blank" href="{{options.twitter_url}}">
               <i class="iconfont icon-twitter-v" title="Twitter"></i>
             </a>
             {% endif %}
             {% if options.twitter_url.indexOf('weibo.com') > -1 %}
-            <a class="inline" target="_blank" href="{{options.twitter_url}}">
+            <a class="inline" rel="nofollow" target="_blank" href="{{options.twitter_url}}">
               <i class="iconfont icon-weibo" title="weibo"></i>
             </a>
             {% endif %}
