--- a/www/theme/firekylin/inc/pagination.html
+++ b/www/theme/firekylin/inc/pagination.html
@@ -1,10 +1,10 @@
 <nav class="pagination">
   {% if pagination.currentPage > 1 %}
-    <a href="/post/?page={{ postList.currentPage - 1 }}" class="prev">&laquo; 上一页</a>
+    <a href="/post/?page={{ pagination.currentPage - 1 }}" class="prev">&laquo; 上一页</a>
   {% endif %}
 
   {% if pagination.currentPage < pagination.totalPages %}
-    <a href="/post/?page={{ postList.currentPage + 1 }}" class="next">下一页 &raquo;</a>
+    <a href="/post/?page={{ pagination.currentPage + 1 }}" class="next">下一页 &raquo;</a>
   {% endif %}
 
   <div class="center"><a href="/archives.html">博客归档</a></div>
