--- a/www/theme/firekylin/layout.html
+++ b/www/theme/firekylin/layout.html
@@ -4,9 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
   <link rel="icon" href="{{options.favicon_url |default('/static/img/firekylin.jpg')}}">
-  {% if options.favicon %}
-  <link rel="shortcut icon" href="{{options.favicon}}" type="image/x-icon">
-  {% endif %}
+  {% if options.favicon %}<link rel="shortcut icon" href="{{options.favicon}}" type="image/x-icon">{% endif %}
   <link rel="alternate" type="application/rss+xml" title="RSS 2.0" href="/rss.html">
   <meta name="keywords" content="{{options.keywords}}">
   <meta name="description" content="{{options.description}}">
