--- a/www/theme/firekylin/inc/pagination.html
+++ b/www/theme/firekylin/inc/pagination.html
@@ -7,5 +7,5 @@
     <a href="/post/?page={{ pagination.currentPage + 1 }}" class="next">下一页 &raquo;</a>
   {% endif %}
 
-  <div class="center"><a href="/archives.html">博客归档</a></div>
+  <div class="center"><a href="/archives.html">文章归档</a></div>
 </nav>
