--- a/www/theme/firekylin/inc/comment.html
+++ b/www/theme/firekylin/inc/comment.html
@@ -14,6 +14,8 @@
         </div>
       {% elif options.comment.type == 'changyan' %}
         <div id="SOHUCS" sid="{{think.md5(http.get('pathname'))}}" data-name="{{options.comment.name}}"></div> 
+      {% elif options.comment.type == 'netease' %}
+        <div id="cloud-tie-wrapper" class="cloud-tie-wrapper" data-name="{{options.comment.name}}"></div>
       {% else %}
         {{options.comment.name|safe}}
       {% endif %}
